observability/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
    app.kubernetes.io/component: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: ""
    app.kubernetes.io/part-of: grafana
    app.openshift.io/runtime: ""
    app.openshift.io/runtime-version: latest
  name: grafana
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
  sessionAffinity: None
  type: ClusterIP
