observability/grafana-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: grafana
    app.kubernetes.io/component: grafana
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: ""
    app.kubernetes.io/part-of: grafana
    app.openshift.io/runtime: ""
    app.openshift.io/runtime-version: latest
  name: grafana
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: grafana
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
